--- a/src/main/resources/static/getotp.html
+++ b/src/main/resources/static/getotp.html
@@ -42,9 +42,11 @@
                 data: {
                     "telphone": $("#telphone").val(),
                 },
+                xhrFields: { withCredentials: true },
                 success: function (data) {
                     if (data.status == "success") {
                         alert("otp已发送,请注意查收");
+                        window.location.href = "./register.html";
                     } else {
                         alert("otp发送失败,原因为" + data.data.errMsg);
                     }
