--- a/src/main/resources/static/getitem.html
+++ b/src/main/resources/static/getitem.html
@@ -46,6 +46,11 @@
                 <label class="control-label" id="sales"></label>
             </div>
         </div>
+        <div class="form-actions">
+            <button class="btn blue" id="createorder" type="submit">
+                下单
+            </button>
+        </div>
     </div>
 </body>
 
@@ -62,6 +67,33 @@
     var g_itemVO = {};
 
     jQuery(document).ready(function () {
+        $("#createorder").on("click", function () {
+            $.ajax({
+                type: "POST",
+                contentType: "application/x-www-form-urlencoded",
+                url: "http://localhost:8090/order/createorder",
+                data: {
+                    "itemId": g_itemVO.id,
+                    "amount": 1
+                },
+                xhrFields: { withCredentials: true },
+                success: function (data) {
+                    if (data.status == "success") {
+                        alert("下单成功");
+                        window.location.reload();
+                    } else {
+                        alert("下单失败,原因为" + data.data.errMsg);
+                        if (data.data.errCode == 20003) {
+                            window.location.href = "login.html";
+                        }
+                    }
+                },
+                error: function (data) {
+                    alert("下单失败,原因为" + data.responseText);
+                }
+            });
+        })
+
         // 获取商品详情
         $.ajax({
             type: "GET",
@@ -89,7 +121,7 @@
         $("#description").text(g_itemVO.description);
         $("#stock").text(g_itemVO.stock);
         $("#price").text(g_itemVO.price);
-        $("#imgUrl").attr("src",g_itemVO.imgUrl);
+        $("#imgUrl").attr("src", g_itemVO.imgUrl);
         $("#sales").text(g_itemVO.sales);
     }
 
