--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -9,7 +9,7 @@
     <script src="metronic/assets/global/plugins/jquery-1.11.0.min.js" type="text/javascript"></script>
 </head>
 
-<body class="login">
+<body class="login">¬
     <div class="content">
         <h3 class="form-title">用户登录</h3>
         <div class="form-group">
