--- a/src/main/resources/static/getitem.html
+++ b/src/main/resources/static/getitem.html
@@ -7,6 +7,7 @@
     <link href="metronic/assets/global/css/components.css" rel="stylesheet" type="text/css" />
     <link href="metronic/assets/admin/pages/css/login.css" rel="stylesheet" type="text/css" />
     <script src="metronic/assets/global/plugins/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="gethost.js" type="text/javascript"></script>
 </head>
 
 <body class="login">
@@ -83,7 +84,7 @@
             $.ajax({
                 type: "POST",
                 contentType: "application/x-www-form-urlencoded",
-                url: "http://localhost:8090/order/createorder",
+                url: "http://" + g_host + "/order/createorder",
                 data: {
                     "itemId": g_itemVO.id,
                     "amount": 1,
@@ -110,7 +111,7 @@
         // 获取商品详情
         $.ajax({
             type: "GET",
-            url: "http://localhost:8090/item/get",
+            url: "http://" + g_host + "/item/get",
             data: {
                 "id": getParam("id")
             },
