--- a/src/main/resources/static/listitem.html
+++ b/src/main/resources/static/listitem.html
@@ -7,6 +7,7 @@
     <link href="metronic/assets/global/css/components.css" rel="stylesheet" type="text/css" />
     <link href="metronic/assets/admin/pages/css/login.css" rel="stylesheet" type="text/css" />
     <script src="metronic/assets/global/plugins/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="gethost.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -39,7 +40,7 @@
     jQuery(document).ready(function () {
         $.ajax({
             type: "GET",
-            url: "http://localhost:8090/item/list",
+            url: "http://" + g_host + "/item/list",
             xhrFields: { withCredentials: true },
             success: function (data) {
                 if (data.status == "success") {
