--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -7,6 +7,7 @@
     <link href="metronic/assets/global/css/components.css" rel="stylesheet" type="text/css" />
     <link href="metronic/assets/admin/pages/css/login.css" rel="stylesheet" type="text/css" />
     <script src="metronic/assets/global/plugins/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="gethost.js" type="text/javascript"></script>
 </head>
 
 <body class="login">
@@ -93,7 +94,7 @@
             $.ajax({
                 type: "POST",
                 contentType: "application/x-www-form-urlencoded",
-                url: "http://localhost:8090/user/register",
+                url: "http://" + g_host + "/user/register",
                 data: {
                     "telphone": telphone,
                     "password": password,
