--- a/src/main/resources/static/getitem.html
+++ b/src/main/resources/static/getitem.html
@@ -81,10 +81,16 @@
 
     jQuery(document).ready(function () {
         $("#createorder").on("click", function () {
+            var token = window.localStorage["token"];
+            if (token == null) {
+                alert("用户还未登录");
+                window.location.href = "login.html";
+                return false;
+            }
             $.ajax({
                 type: "POST",
                 contentType: "application/x-www-form-urlencoded",
-                url: "http://" + g_host + "/order/createorder",
+                url: "http://" + g_host + "/order/createorder?token=" + token,
                 data: {
                     "itemId": g_itemVO.id,
                     "amount": 1,
