--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -10,7 +10,7 @@
     <script src="gethost.js" type="text/javascript"></script>
 </head>
 
-<body class="login">¬
+<body class="login">
     <div class="content">
         <h3 class="form-title">用户登录</h3>
         <div class="form-group">
@@ -66,6 +66,8 @@
                 success: function (data) {
                     if (data.status == "success") {
                         alert("登录成功");
+                        var token = data.data;
+                        window.localStorage["token"] = token;
                         window.location.href = "listitem.html";
                     } else {
                         alert("登录失败,原因为" + data.data.errMsg);
